layout: use dvh instead of vh for height: 100vh to correctly adjust to visible mobile screen area

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -95,7 +95,7 @@
 }
 
 body {
-  min-height: 100vh;
+  min-height: 100dvh;
   margin: 0;
   background: var(--light);
   color: var(--light-900);
